test/compile_errors/err_action_ctx_tool_capability_struct_literal.w
//! expect-error: tool capability 'ActionCtx' can only be constructed by the compiler driver

use std.build

fn main:
    let _fake = ActionCtx { token: "" }
